objects/CCPE_Lesson_Learned__c.object
<CustomObject>
    <fields>
        <fullName>CCPE_Best_Practice_Justification__c</fullName>
        <inlineHelpText>Explain why this is a best practice and how it will improve our projects.</inlineHelpText>
        <label>Best Practice Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPE_Best_Practice__c</fullName>
        <inlineHelpText>Should this be shared with others and included in our project methodology?</inlineHelpText>
        <label>Best Practice?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPE_Description__c</fullName>
        <inlineHelpText>Description of the lesson learned, including the risks of ignoring the lesson.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCPE_Knowledge_Area__c</fullName>
        <label>Knowledge Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Design/Build</fullName>
                </value>
                <value>
                    <fullName>Go Live Cutover</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Post Production</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
                <value>
                    <fullName>Project Management - Business</fullName>
                </value>
                <value>
                    <fullName>Project Management - IT</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Team Resources</fullName>
                </value>
                <value>
                    <fullName>Testing - QA</fullName>
                </value>
                <value>
                    <fullName>Testing - UAT</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Training - UAT</fullName>
                    <isActive>false</isActive>
                    <label>Training - UAT</label>
                </value>
                <value>
                    <fullName>Vendor Selection Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPE_Project__c</fullName>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Lessons Learned</relationshipLabel>
        <relationshipName>Lessons_Learned</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CCPE_Recommendation__c</fullName>
        <inlineHelpText>Suggestions for implementing the lesson on a future project or for taking process improvement actions based on the lesson.</inlineHelpText>
        <label>Recommendation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Lesson Learned</label>
    <nameField>
        <displayFormat>LL-{0000000000}</displayFormat>
        <label>Lesson Learned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons Learned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CCPE_LessonLearnedBestPracticeReqJust</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(CCPE_Best_Practice__c, &quot;Yes&quot;),
ISBLANK(CCPE_Best_Practice_Justification__c))</errorConditionFormula>
        <errorMessage>To designate this lesson learned as a Best Practice, please provide justification for doing so in the field provided below.</errorMessage>
    </validationRules>
</CustomObject>